init: still setting up gulp

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   @@include('_header.html')
   <main class="main">
-    
+    <img src="./img/200563607_1421010778282101_5957639377692318255_n.jpg" alt="">
   </main>
   <script src="./js/index.min.js"></script>
 </body>
